change manage kpi calculate type

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
 *= require wayne_sunny
 *= require _epm_base
 *= require chosen
+*= require index
 *= require Analytic-main
 *= require font-awesome
 *= require aero
