--- a/app/assets/stylesheets/_epm_base.css
+++ b/app/assets/stylesheets/_epm_base.css
@@ -1,17 +1,17 @@
 @font-face {
     font-family:"open-sans";
-    /*src: url("/assets/OpenSans-Regular.eot");*/
-    /*src: local("/assets/OpenSans-Regular Regular"),*/
-    /*local("/assets/OpenSans-Regular"),*/
-    /*url('/assets/OpenSans-Regular.woff') format('woff'),*/
-    /*url('/assets/OpenSans-Regular.ttf') format('truetype'),*/
-    /*url('/assets/OpenSans-Regular.svg#OpenSans-Regular') format('svg');*/
-    src: url("font/OpenSans-Regular.eot");
-    src: local("font/OpenSans-Regular Regular"),
-    local("font/OpenSans-Regular"),
-    url('font/OpenSans-Regular.woff') format('woff'),
-    url('font/OpenSans-Regular.ttf') format('truetype'),
-    url('font/OpenSans-Regular.svg#OpenSans-Regular') format('svg');
+    src: url("/assets/OpenSans-Regular.eot");
+    src: local("/assets/OpenSans-Regular Regular"),
+    local("/assets/OpenSans-Regular"),
+    url('/assets/OpenSans-Regular.woff') format('woff'),
+    url('/assets/OpenSans-Regular.ttf') format('truetype'),
+    url('/assets/OpenSans-Regular.svg#OpenSans-Regular') format('svg');
+    /*src: url("font/OpenSans-Regular.eot");*/
+    /*src: local("font/OpenSans-Regular Regular"),*/
+    /*local("font/OpenSans-Regular"),*/
+    /*url('font/OpenSans-Regular.woff') format('woff'),*/
+    /*url('font/OpenSans-Regular.ttf') format('truetype'),*/
+    /*url('font/OpenSans-Regular.svg#OpenSans-Regular') format('svg');*/
 }
 @font-face {
     font-family:"helve";
