new dashboard add

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -177,5 +177,6 @@
         init_component();
         DASHBOARD.init();
         right_nav_main.init();
+        DASHBOARD.add.init();
     });
 </script>
