--- a/app/assets/stylesheets/Dashboard.css
+++ b/app/assets/stylesheets/Dashboard.css
@@ -32,9 +32,9 @@
     border-radius:6px;
     -webkit-border-radius:6px;
     -moz-border-radius:6px;
-    box-shadow:1px 1px 2px rgba(0,0,0,0.3);
-    -moz-box-shadow:1px 1px 2px rgba(0,0,0,0.3);
-    -webkit-box-shadow:1px 1px 2px rgba(0,0,0,0.3);
+    box-shadow:1px 1px 4px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow:1px 1px 4px rgba(0, 0, 0, 0.6);
+    -webkit-box-shadow:1px 1px 4px rgba(0, 0, 0, 0.6);
 }
 .dashboard-moreDetail{
     padding:6px 7px;
