--- a/app/assets/stylesheets/jquery.gridster.css
+++ b/app/assets/stylesheets/jquery.gridster.css
@@ -1,3 +1,7 @@
+/*! gridster.js - v0.2.1 - 2013-10-28
+* http://gridster.net/
+* Copyright (c) 2013 ducksboard; Licensed MIT */
+
 .gridster {
     position:relative;
 }
