--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -172,6 +172,13 @@
     </div>
 </div>
 
+ <div class="dashboard-content-full" id="dashboard-content-full">
+   <div class="gridster" >
+     <ul class="dashBoard-show" >
+     </ul>
+   </div>
+ </div>
+
 <script type="text/javascript">
     $(document).ready(function (){
         init_component();
