--- a/app/assets/stylesheets/_epm_base.css
+++ b/app/assets/stylesheets/_epm_base.css
@@ -38,7 +38,7 @@ html{
     height:100%;
 }
 body{
-    height:100%;
+    /*height:100%;*/
     margin:0;
     font-weight:500;
     font-family:"open-sans";
