--- a/app/views/kpis/index.html.erb
+++ b/app/views/kpis/index.html.erb
@@ -82,4 +82,7 @@
           MANAGE.init();
           MANAGE.kpi.init();
      })
-</script>
+</script> 
+<% content_for :javascript_includes do%>
+  <%= javascript_include_tag "Manage-kpi.js"%>
+<%end%>
