--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,4 +19,5 @@
            I18n.defaultLocale = "<%= I18n.default_locale %>";
            I18n.locale = "<%= I18n.locale %>";
      </script>
+     <%= yield :javascript_includes%>
 </html>
