--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div class="get-start-middle  clearfix startup-middle">
     <div style="width:880px;position:relative;margin-left:-440px;left:50%;padding:30px 0;">
-          <img src="/assets/naviPage.png"/>
+          <%= image_tag "naviPage.png"%>
     </div>
 </div>
