dashboard full size

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -11,7 +11,7 @@
             </div>
 
             <div class="dashboard-content" id="dashboard-content">
-                <div class="gridster dash-content">
+                <div id="dash-normalsize" class="gridster dash-content">
                     <ul class="dashBoard-show" id="dashBoard-show">
                     </ul>
                 </div>
@@ -173,8 +173,9 @@
 </div>
 
  <div class="dashboard-content-full" id="dashboard-content-full">
-   <div class="gridster" >
-     <ul class="dashBoard-show" >
+   <div id="dash-fullsize" class="gridster">
+     <ul class="dashBoard-show" id="dashBoard-show-full">
+
      </ul>
    </div>
  </div>
