dashboard js and add fix

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -195,6 +195,12 @@
   <%= javascript_include_tag "ifepm.grid.main.js"%>
   <%= javascript_include_tag "ifepm.dashboard.template.js"%>
   <%= javascript_include_tag "ifepm.dashboard.main.js"%>
+
+  <%= javascript_include_tag "high_chart_template.js"%>
+  <%= javascript_include_tag "high_chart_theme.js"%>
+  <%= javascript_include_tag "Dashboard-add.js"%>
+  <%= javascript_include_tag "Dashboard-init.js"%>
+  <%= javascript_include_tag "dashboard_type_special.js"%>
 <%end%>
 
 <script type="text/javascript">
