--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,3 +3,26 @@
           <%= image_tag "naviPage.png"%>
     </div>
 </div>
+
+<script type="text/javascript">
+  step = [
+      {
+          element:$('\[guide-name="mange_menu"\]').get(0),
+          intro: "在开始输入和查看KPI前，您首先需要在这里设定一些关于您的企业的基础数据。"
+      },
+      {
+
+          element:$('\[guide-name="entry_menu"\]').get(0),
+          intro: "在简单地设置了基础信息后，您和您的同事或员工就可以在这里输入属于您企业需要分析的数据。"
+      },
+      {
+          element:$('\[guide-name="dashboard_menu"\]').get(0),
+          intro: "布置您的仪表盘，将枯燥的企业数据变成简单易懂，又实时更新的图表。"
+      },
+      {
+          element:$('\[guide-name="analyze_menu"\]').get(0),
+          intro: "在这里您可以使用分析工具分析您企业数据的现况，趋势。简单的点击即可获得可视化的结果。"
+      }
+
+  ];
+</script>
