user guide framework complete

--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -31,7 +31,7 @@
                     <a  href="<%= dashboards_path%>" guide-name="dashboard_menu"> <span><%= t 'menu.dashboard'%></span>  </a>
                </li>
                <li>
-                    <a   href="<%= analyse_kpi_entries_path%>" guide-name="analyse_menu"> <span><%= t 'menu.analytics'%></span> </a>
+                    <a   href="<%= analyse_kpi_entries_path%>" guide-name="analyze_menu"> <span><%= t 'menu.analytics'%></span> </a>
                </li>
                <li>
                     <a guide-name="report_menu"> <span><%= t 'menu.reports'%></span></a>
