--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,13 @@
      <script type="text/javascript">
            I18n.defaultLocale = "<%= I18n.default_locale %>";
            I18n.locale = "<%= I18n.locale %>";
+           $.ajaxSetup({
+             statusCode : {
+              403 : function() {
+               alert("无权访问");
+            }
+           }
+         }); 
      </script>
      <%= yield :javascript_includes%>
 </html>
