--- a/app/assets/stylesheets/_epm_base.css
+++ b/app/assets/stylesheets/_epm_base.css
@@ -95,11 +95,20 @@ header{
     cursor:pointer;
 }
 .user-portrait-brand{
-    background:url("/assets/logo.png") no-repeat center bottom;
-    /*background:url("../images/logo.png") no-repeat center bottom;*/
-    width:80px;
-    height:63px;
+    /*background:url("/assets/logo2.png") no-repeat center bottom;*/
+    background:url("../images/logo2.png") no-repeat center center;
+    width:45px;
+    height:45px;
     padding-top:0px;
+    background-size:cover;
+    border-radius:45px;
+    -moz-border-radius:45px;
+    -webkit-border-radius:45px;
+    margin-top:12px;
+    margin-left:13px;
+    box-shadow:2px 2px 4px rgba(0,0,0,0.2);
+    -moz-box-shadow:2px 2px 4px rgba(0,0,0,0.2);
+    -webkit-box-shadow:2px 2px 4px rgba(0,0,0,0.2);
 }
 nav{
     height:100%;
@@ -141,7 +150,7 @@ nav ul li:nth-last-of-type(2) a:hover span{
 }
 nav ul li a span:nth-of-type(1){
     display:block;
-    margin-top:24px;
+    margin-top:22px;
     margin-bottom:20px;
     padding:3px 13px;
 }
@@ -153,8 +162,8 @@ nav ul li:last-of-type a span{
     padding-left:3px;
 }
 nav ul li:last-of-type a span:before{
-    /*content:url('../images/entry-kpi.png');*/
-    content:url('/assets/entry-kpi.png');
+    content:url('../images/entry-kpi.png');
+    /*content:url('/assets/entry-kpi.png');*/
     display:block;
     width:30px;
     height:1px;
