--- a/app/assets/stylesheets/_epm_base.css
+++ b/app/assets/stylesheets/_epm_base.css
@@ -162,10 +162,10 @@ nav ul li:last-of-type a span{
     padding-left:3px;
 }
 nav ul li:last-of-type a span:before{
-    content:url('../images/entry-kpi.png');
-    /*content:url('/assets/entry-kpi.png');*/
+    /*content:url('../images/entry-kpi.png');*/
+    content:url('/assets/entry-kpi.png');
     display:block;
-    width:30px;
+    width:20px;
     height:1px;
     position:absolute;
     bottom:29px;
