--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -6,3 +6,69 @@
     left:0px;
     overflow:hidden;
 }
+/******************** index-welcome */
+.index-welcome{
+    width:98%;
+    margin:10px 0px 20px 1%;
+    background-color:rgba(0,0,0,0.04);
+    border-radius:4px;
+    -moz-border-radius:4px;
+    webkit-border-radius:4px;
+    padding:15px 0;
+}
+.index-welcome:after{
+    content:'';
+    display:block;
+    clear:both;
+}
+.index-welcome .left-image{
+    height:170px;
+    width:455px;
+    background:url("../images/index-old.jpg")no-repeat center -70px #000;
+    border-radius:5px;
+    -moz-border-radius:5px;
+    -webkit-border-radius:5px;
+    box-shadow:2px 2px 4px rgba(0,0,0,0.4);
+    -moz-box-shadow:2px 2px 4px rgba(0,0,0,0.4);
+    -webkit-box-shadow:2px 2px 4px rgba(0,0,0,0.4);
+    float:left;
+    margin-left:30px;
+}
+@media screen and (min-width:1536px) {
+    .index-welcome .left-image{
+        background:url("../images/index-retina.jpg")no-repeat center center #000;
+    }
+}
+
+
+.index-welcome .right-info{
+    float:left;
+    margin-left:30px;
+    border-radius:0px 4px 4px 0;
+    -moz-border-radius:0px 4px 4px 0;
+    -webkit-border-radius:0px 4px 4px 0;
+    height:150px;
+}
+.index-welcome .right-info h2{
+    font-size:70px;
+    font-family:"helve";
+    color:#5FA9DA;
+    font-weight:lighter;
+    text-shadow:2px 2px 3px rgba(0,0,0,0.15);
+    -moz-text-shadow:2px 2px 3px rgba(0,0,0,0.15);
+    -webkit-text-shadow:2px 2px 3px rgba(0,0,0,0.15);
+    padding-top:0px;
+    padding-bottom:0px;
+}
+.index-welcome .right-info p:first-of-type{
+    margin-top:-2px;
+    margin-bottom:30px;
+    color:rgba(0,0,0,0.3);
+}
+.index-welcome .right-info p{
+    color:rgba(0,0,0,0.5);
+    font-size:14px;
+}
+.index-welcome .right-info p i{
+    margin-right:6px;
+}
